[project]
name = "neu-ml-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "xgboost>=2.1.4",
]
